name = 'ast-graphql'
uuid = '9c54b3fb-6837-4728-b398-996cd65bbdd6'
version = '0.1.0'

[tool.poetry]
name = "ast-graphql"
version = "0.1.0"
description = "A GraphQL layer over the AST API"
authors = ["James Bostock <James.Bostock@checkmarx.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ariadne = "^0.15.1"
CheckmarxPythonSDK = "^0.5.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
